# crypto-index-pipeline

./: .gitignore  README.md  docker-compose.yml  init.sql
python/: config.py  consumer.py  producer.py
python/tests/: stress_test.py  test_consumer.py
rust/: Cargo.toml
rust/src/: config.rs  models.rs
