[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
deadpool-postgres = "0.14.1"
futures-util = "0.3.32"
rdkafka = "0.39.0"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = {version = "1.49.0", features = ["full"]}
tokio-postgres = "0.7.16"
tokio-tungstenite = {version = "0.28.0", features = ["native-tls"]}
